# Varnish-Cache

./: Makefile.am  configure.ac
doc/: Makefile.am
doc/graphviz/: Makefile.am
doc/sphinx/: Makefile.am
etc/: Makefile.am
include/: Makefile.am
lib/libvarnish/: Makefile.am
lib/libvarnishapi/: Makefile.am
lib/libvarnishcompat/: Makefile.am
lib/libvarnishtools/: Makefile.am
lib/libvcc/: Makefile.am
lib/libvgz/: Makefile.am
lib/libvmod_debug/: Makefile.am
lib/libvmod_directors/: Makefile.am
lib/libvmod_std/: Makefile.am
man/: Makefile.am
